# Vacuo

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  HANGELOG.md  Makefile  README.de.md  README.md  README.ru.md  README.uk.md  README_RU.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
cmake/: VacuoPackaging.cmake
data/: io.github.trendorin.Vacuo.desktop  io.github.trendorin.Vacuo.metainfo.xml
data/polkit/: io.github.trendorin.Vacuo.policy.in
docs/: PRIVACY.md  SECURITY_MODEL.md
include/vacuo/: version.hpp
include/vacuo/core/: cleaner.hpp  helper_actions.hpp  json.hpp  process_runner.hpp  rule_catalog.hpp  safe_delete.hpp  scanner.hpp  system_detector.hpp  types.hpp
packaging/arch/: PKGBUILD.in
packaging/scripts/: build-release.sh  generate-sbom.sh
src/cli/: main.cpp
src/core/: cleaner.cpp  helper_actions.cpp  json.cpp  process_runner.cpp  rule_catalog.cpp  safe_delete.cpp  scanner.cpp  system_detector.cpp  types.cpp
src/gui/: language_manager.cpp  language_manager.hpp  main.cpp  main_window.cpp  main_window.hpp  scan_model.cpp  scan_model.hpp  settings_dialog.cpp  settings_dialog.hpp  translation_utils.cpp  translation_utils.hpp
src/helper/: main.cpp
tests/: run-core-tests.sh  test_main.cpp
translations/: vacuo_de.ts  vacuo_ru.ts  vacuo_uk.ts
